--- a/app/static/style.css
+++ b/app/static/style.css
@@ -17,3 +17,22 @@
     width: 100%;
     height: 100%;
 }
+
+/* Reglas CSS para dispositivos móviles */
+@media (max-width: 576px) {
+    .container {
+        display: grid;
+        grid-template-columns: 1fr; /* Una columna para dispositivos pequeños */
+    }
+
+    table {
+        width: 100%;
+        font-size: 12px; /* Reducir el tamaño de la fuente en dispositivos pequeños */
+    }
+
+    td, th {
+        white-space: nowrap; /* Evitar que el contenido de las celdas se desborde */
+        overflow: hidden; /* Ocultar cualquier contenido que se desborde */
+        text-overflow: ellipsis; /* Mostrar puntos suspensivos (...) para indicar texto cortado */
+    }
+}
