--- a/app/templates/productoWeb.html
+++ b/app/templates/productoWeb.html
@@ -2,33 +2,38 @@
 
 {% block content %}
 
-<div class="container text-center">
+<div class="container">
     <div class="row">
-      <div class="col">
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">Codigo EAN</th>
-            <th scope="col">Descripcion</th>
-            <th scope="col">Tamaño</th>
-            <th scope="col">Precio</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">{{ codigo }}</th>
-            <td><h2>{{ descripcion }}</h2></td>
-            <td><h2>{{ dimension }}{{ unidad }}</h2></td>
+        <div class="col">
+            <table class="table">
+                <tbody>
+                    <tr>
+                        <td>Codigo EAN</td>
+                        <td>{{ codigo }}</td>
+                    </tr>
+                    <tr>
+                        <td>Descripcion</td>
+                        <td>{{ descripcion }}</td>
+                    </tr>
+                    <tr>
+                        <td>Tamaño</td>
+                        <td>{{ dimension }}{{ codigo.unidad_de_peso }}</td>
+                    </tr>
+                    <tr>
+                        <td>Precio</td>
+                        <td>{{ precio }}</td>
+                    </tr>
+                </tbody>
+            </table>
 
-          </tr>
-        </tbody>
-      </table>
+            <div class="pt-3 text-center">
+                <a class="btn btn-info" href="#">Agregar producto</a>
+            </div>
 
-        <div class="pt-3">
-            <a class="btn btn-danger ml-2" href="{{ url_for('capturar') }}">Escanear de nuevo</a>
+            <div class="pt-3 text-center">
+                <a class="btn btn-danger" href="{{ url_for('capturar') }}">Escanear de nuevo</a>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-
+</div>
 {% endblock content %}
